--- a/styles/main.css
+++ b/styles/main.css
@@ -17,3 +17,17 @@ h1,h2,h3,h4,h5,h6 {
   font-family: "Patua One", serif;
   letter-spacing: 2px;
 }
+
+.criminalsContainer {
+	display : flex;
+	flex-wrap : warp;
+	justify-content: space-evenly;
+	align-content: space-between;
+}
+
+.criminal {
+	border: 1px dotted black;
+	margin: 1rem;
+	padding: 0.5rem;
+	flex-basis: 25%;
+}
