--- a/styles/main.css
+++ b/styles/main.css
@@ -18,15 +18,29 @@ h1,h2,h3,h4,h5,h6 {
   letter-spacing: 2px;
 }
 
-.criminalsContainer {
+.criminalList {
 	display : flex;
-	flex-wrap : warp;
+	flex-wrap : wrap;
 	justify-content: space-evenly;
 	align-content: space-between;
 }
 
 .criminal {
-	border: 1px dotted black;
+	border: 2px dashed black;
+	margin: 1rem;
+	padding: 0.5rem;
+	flex-basis: 25%;
+}
+
+.officerList {
+	display : flex;
+	flex-wrap : wrap;
+	justify-content: space-evenly;
+	align-content: space-between;
+}
+
+.officer {
+	border: 2px dashed black;
 	margin: 1rem;
 	padding: 0.5rem;
 	flex-basis: 25%;
