--- a/styles/main.css
+++ b/styles/main.css
@@ -39,6 +39,13 @@ h1,h2,h3,h4,h5,h6 {
 	flex-basis: 25%;
 }
 
+.facility {
+	border: 2px dashed black;
+	margin: 1rem;
+	padding: 0.5rem;
+	flex-basis: 25%;
+}
+
 .officerList {
 	display : flex;
 	flex-wrap : wrap;
